<resources>
    <string name="app_name">MobileOrgActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="empty_main">Welcome to MobileOrg</string>
    <string name="downloading">Downloading</string>
    <string name="view_as_document">View as document</string>
    <string name="title">Title</string>
    <string name="search_results_for">Search results for</string>
    <string name="body">Click here to set the body text</string>
    <string name="tags">Tags</string>
    <string name="priority">Priority</string>
    <string name="todo_state">Todo state</string>
    <string name="scheduled">Scheduled</string>
    <string name="deadline">Deadline</string>
    <string name="no_state">No state</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search_hint">Search</string>
    <string name="warning">WARNING!</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="set_title_here">Set title here</string>
    <string name="set_content_here">Set content here</string>
    <string name="insert_node">Insert node</string>
    <string name="insert_child_node">Insert child node</string>
    <string name="new_file">Create new file</string>
    <string name="file">File</string>
    <string name="files">Files</string>
    <string name="delete_node">Delete node</string>
    <string name="filename">Filename</string>
    <string name="details">Details</string>
    <string name="no_node">You have no node in this file:</string>
    <string name="no_todo">Lucky you !\n\nYour TODO list is empty.</string>
    <string name="conflict">Conflict</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="auth_type">Authentication type:</string>
    <string name="unselectable_item">You cannot select this item</string>
    <string name="prompt_enter_password">Enter password</string>
    <string name="prompt_delete_file">Are you sure you want to delete this file?</string>
    <string name="prompt_delete_files">Are you sure you want to delete these # files?</string>
    <string name="prompt_node_delete">Are you sure you want to delete this node?</string>
    <string name="prompt_node_archive">Are you sure you want to archive this node?</string>
    <string name="prompt_node_edit">Are you sure you want to discard changes?</string>
    <string name="prompt_cert_changed">The WebDAV Certificate has changed, below are the details.  If you are okay with this click \'Accept\' otherwise click \'Deny\'.  If you accept the new certificate you will need to re-issue your Synchronize command</string>
    <string name="sync_not_configured">Sync not configured</string>
    <string name="sync_successful">Synchronization Successful</string>
    <string name="sync_error_occured">Error occurred during sync:</string>
    <string name="sync_synchronizing_changes">Synchronizing changes</string>
    <string name="sync_error_server_certificate">Error with server certificate:</string>
    <string name="sync_wait">Synchronizing, please wait…</string>
    <string name="sync_failed">Synchronization failed</string>
    <string name="sync_plugin">MobileOrg Synchronization</string>
    <string name="sync_plugin_info">This plugin allows you to trigger a MobileOrg Sync from Locale or Tasker.  If you are okay with this click \'Accept\' otherwise click \'Deny\'</string>
    <string name="sync_plugin_message">Synchronize</string>
    <string name="sync_git_file_added">Added file : </string>
    <string name="sync_git_merge_files">Conflict\nMerge files : </string>
    <string name="error_sqlio">There was a problem reading from the database, is your drive corrupted or is the SDCard mounted?</string>
    <string name="error_generic_database">Unhandled database error: %s</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="path">Absolute Path</string>
    <string name="login">Log in</string>
    <string name="i_want_to_sync_using">I want to sync using:</string>
    <string name="wizard_ssh">an SSH server</string>
    <string name="wizard_null">nothing (capture only)</string>
    <string name="log_in_to_dropbox">Log in to Dropbox</string>
    <string name="log_in_to_ssh">Log in to your SSH server</string>
    <string name="ssh_inform_choose_pub_file">SSH private key</string>
    <string name="dropbox_login_info">This will redirect you to a login form.  After logging in it will return you to this screen to continue.</string>
    <string name="preferences">Preferences</string>
    <string name="preference_actions">Actions</string>
    <string name="preference_edit">Edit</string>
    <string name="preference_interface">Interface</string>
    <string name="preference_general">General</string>
    <string name="preference_advanced">Advanced</string>
    <string name="preference_autosync">Background sync</string>
    <string name="preference_autosync_summary">Automatically synchronize MobileOrg database in the background</string>
    <string name="preference_autosync_interval">Background sync interval</string>
    <string name="preference_autosync_interval_summary">How often the background sync service should run</string>
    <string name="preference_view_wrap_lines">Wrap lines</string>
    <string name="preference_view_wrap_lines_summary">Using custom line wrapping when viewing nodes</string>
    <string name="preference_default_todo_summary">Default todo when capturing files</string>
    <string name="preference_default_todo">Default todo</string>
    <string name="preference_clear_db">Clear database</string>
    <string name="preference_other">Other</string>
    <string name="preference_version">Version</string>
    <string name="preference_recursion_level">Child nodes to display</string>
    <string name="preference_view">View</string>
    <string name="preference_synchronization">Synchronization</string>
    <string name="preference_sync_source_summary">Where to sync Org files from</string>
    <string name="preference_sync_source">Synchronization mode</string>
    <string name="preference_fontsize_summary">Font size used in outline.</string>
    <string name="preference_fontsize">Font size</string>
    <string name="preference_exclude_tags">Exclude tags inheritance</string>
    <string name="preference_exclude_tags_summary">Tags separated by \":\" to exclude from inheritance.</string>
    <string name="preference_combine_block_agenda_summary">Combines block agendas into one node, with separators. Needs resync of agenda file to take effect</string>
    <string name="preference_combine_block_agenda">Combine block agendas</string>
    <string name="preference_calendar">Calendar</string>
    <string name="preference_calendar_display">Display</string>
    <string name="preference_calendar_synch_summary">Synchronize scheduled items with the system calendar</string>
    <string name="preference_calendar_synch">Synchronize with calendar</string>
    <string name="preference_calendar_name_summary">Choose calendar MobileOrg will use</string>
    <string name="preference_calendar_name">Calendar name</string>
    <string name="preference_calendar_pull_summary">Assimilate calendar entries not inserted by MobileOrg and add them to capture file. EXPERIMENTAL!</string>
    <string name="preference_calendar_pull">Assimilate calendar entries</string>
    <string name="preference_calendar_pull_delete_summary">Delete entries that have been assimilated from the calendar</string>
    <string name="preference_calendar_pull_delete">Delete on assimilation</string>
    <string name="preference_calendar_reminder_summary">Add reminders for scheduled items to calendar</string>
    <string name="preference_calendar_reminder">Reminders</string>
    <string name="preference_calendar_reminder_interval_summary">Sets the interval when an alarm is triggered</string>
    <string name="preference_calendar_reminder_interval">Reminder interval</string>
    <string name="preference_calendar_show_habits_summary">Shows habits in the calendar</string>
    <string name="preference_calendar_show_habits">Show habits</string>
    <string name="preference_calendar_show_done_summary">Show items with done TODO keywords the calendar</string>
    <string name="preference_calendar_show_done">Show done events</string>
    <string name="preference_calendar_show_past_summary">Show past items in the calendar</string>
    <string name="preference_calendar_show_past">Show past events</string>
    <string name="preference_theme">Theme</string>
    <string name="preference_capture_advanced">Advanced capture</string>
    <string name="preference_capture_advanced_summary">Advanced capturing mechanism that allows capturing files under arbitrary headings.</string>
    <string name="preference_setup_wizard">Setup Wizard</string>
    <string name="preference_view_apply_formatting_summary">Apply formatting of orgmode emphasis, bold, underline and strike-through when viewing.</string>
    <string name="preference_view_apply_formatting">Apply view formatting</string>
    <string name="preference_properties_drawer">Properties drawer</string>
    <string name="preference_view_node_properties_enabled_summary">Display contents of nodes\' properties drawers.</string>
    <string name="preference_view_node_properties_enabled">Display node properties</string>
    <string name="preference_properties_drawer_fields_summary">Restrict display to specific fields. List of fields, separated by space(s). Leave empty for no restriction.</string>
    <string name="preference_properties_drawer_fields">Fields</string>
    <string name="preference_properties_drawer_files_summary">Restrict display to specific files. List of filenames separated by \';\'. Leave empty for no restriction.</string>
    <string name="preference_properties_drawer_files">Files</string>
    <string name="preference_sync_wifi_only">Sync with Wifi only</string>
    <string name="preference_sync_wifi_only_summary">Only try to synchronize when Wireless is up</string>
    <string name="preference_view_on_click">View on click</string>
    <string name="preference_view_on_click_summary">Changes default action from editing to viewing of outline entries</string>
    <string name="preference_capture_with_timestamp">Capture with timestamp</string>
    <string name="preference_capture_with_timestamp_summary">Captured nodes will have a timestamp added</string>
    <string name="preference_selected_todos">Quick Todo keywords</string>
    <string name="preference_selected_todos_summary">Select the TODO keywords available in outline for quick select. Separated by space.</string>
    <string name="key_autoSyncInterval">autoSyncInterval</string>
    <string name="key_viewRecursionMax">viewRecursionMax</string>
    <string name="key_defaultTodo">defaultTodo</string>
    <string name="key_calendarName">calendarName</string>
    <string name="key_calendarReminderInterval">calendarReminderInterval</string>
    <string name="key_theme">theme</string>
    <string name="key_fontSize">fontSize</string>
    <string name="key_syncSource">syncSource</string>
    <string name="key_syncWifiOnly">syncWifiOnly</string>
    <string name="key_quick_todos">quickTodos</string>
    <string name="key_version">version</string>
    <string name="title_scp_host">Host</string>
    <string name="title_scp_port">Port</string>
    <string name="title_scp_path">Path</string>
    <string name="summary_scp_path">Full path to index.org on the server</string>
</resources>