<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_agenda"
        android:icon="@drawable/ic_menu_agenda"
        android:title="@string/menu_agenda"/>
    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/menu_sync"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/menu_settings"/>

</menu>