<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">      
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:id="@+id/wizard_ssh">
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/log_in_to_ssh"
          android:textSize="20dp"
          android:textStyle="bold"
          android:paddingBottom="20dp"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/username"
          android:textSize="20dp"/>
      <EditText
          android:id="@+id/wizard_ssh_username"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:singleLine="true" android:inputType="text|textEmailAddress"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_type"
            android:textSize="20dp"/>
        <Switch
            android:id="@+id/auth_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
      </LinearLayout>
      <TextView
          android:id="@+id/wizard_ssh_password_text"
          android:paddingTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/password"
          android:textSize="20dp"/>
      <EditText
          android:id="@+id/wizard_ssh_password"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:inputType="textPassword"
          android:password="true"
          android:singleLine="true"/>
      <TextView
          android:id="@+id/wizard_ssh_pubkey_prompt"
          android:paddingTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ssh_inform_choose_pub_file"
          android:textSize="20dp"/>
      <Button
          android:layout_marginTop="20dp"
          android:id="@+id/wizard_ssh_choose_pub_file"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/generate_dsa_keys"
          android:textSize="20dp"/>
      <TextView
          android:id="@+id/wizard_ssh_pub_file_actual"
          android:paddingTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text=""
          android:textSize="20dp"/>
      <TextView
          android:paddingTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/path"
          android:textSize="20dp"/>
      <EditText
          android:id="@+id/wizard_ssh_path"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:singleLine="true"
          android:inputType="textUri"/>
      <TextView
          android:paddingTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/host"
          android:textSize="20dp"/>
      <EditText
          android:id="@+id/wizard_ssh_host"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:singleLine="true"/>
      <TextView
          android:paddingTop="10dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/port"
          android:textSize="20dp"/>
      <EditText
          android:id="@+id/wizard_ssh_port"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:textSize="20dp"
          android:inputType="number"
          android:defaultValue="22"
          android:singleLine="true"/>
      <Button
          android:layout_marginTop="20dp"
          android:id="@+id/done"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:layout_marginBottom="20dp"
          android:text="@string/ok"
          android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>
