<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="20dp"
	android:paddingLeft="20dp"
	android:paddingRight="20dp"
	android:id="@+id/wizard_dropbox">
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/log_in_to_dropbox"
		android:textSize="20dp"
		android:textStyle="bold"
		android:paddingBottom="20dp"/>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/dropbox_login_info"
		android:paddingBottom="20dp"/>
	<TextView
		android:id="@+id/wizard_dropbox_accountinfo"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"/>
	<Button
		android:layout_marginTop="10dp"
		android:id="@+id/wizard_dropbox_login_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:textSize="20dp"/>
</LinearLayout>

