<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/EditBorders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dip" >

        <EditText
            android:id="@+id/widget_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text|textMultiLine|textAutoCorrect|textCapSentences" />
    </LinearLayout>

    <LinearLayout
        style="@style/EditBorders"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="3dip" >

        <fragment
            android:name="com.matburt.mobileorg.Gui.Capture.LocationFragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:tag="captureLocationFragment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/widget_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/widget_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>